k8s_manifests/grafana/grafana-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare-prod
  name: grafana
  namespace: grafana-app
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana.fahmed.org`)
      services:
        - name: my-grafana
          port: 80
