k8s_manifests/grafana/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations: {}
  name: grafana
  namespace: grafana-app
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana.fahmed.org`)
      services:
        - name: grafana-app
          port: 80
  tls:
    secretName: grafana-tls
